--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,19 +37,26 @@ android {
     }
 }
 
+
+ext {
+    compat = '1.3.1'
+    dagger = '2.37'
+    rxandroid = '2.1.1'
+    rxjava = '2.2.20'
+    retrofit = '2.9.0'
+}
+
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
-    //implementation 'androidx.appcompat:appcompat:1.3.1'
-    //implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //AndroidX
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation "androidx.appcompat:appcompat:${compat}"
 
     //Design
     //You should not use the com.android.support and com.google.android.material dependencies in your app at the same time
@@ -60,18 +67,18 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.20'
 
     //Rx-Java
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
+    implementation "io.reactivex.rxjava2:rxandroid:${rxandroid}"
+    implementation "io.reactivex.rxjava2:rxjava:${rxjava}"
 
     //Retrofit 2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:${retrofit}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit}"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
-    implementation "com.google.dagger:dagger:2.37"
-    implementation "com.google.dagger:dagger-android:2.37"
-    implementation "com.google.dagger:dagger-android-support:2.37"
-    kapt "com.google.dagger:dagger-compiler:2.35.1"
-    kapt "com.google.dagger:dagger-android-processor:2.35.1"
+    implementation "com.google.dagger:dagger:${dagger}"
+    implementation "com.google.dagger:dagger-android:${dagger}"
+    implementation "com.google.dagger:dagger-android-support:${dagger}"
+    kapt "com.google.dagger:dagger-compiler:${dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${dagger}"
 }
