--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,27 +44,40 @@ ext {
     rxandroid = '2.1.1'
     rxjava = '2.2.20'
     retrofit = '2.9.0'
+    koin_version = "3.1.2"
+    coroutines_core = '1.5.1'
+    coroutines_android = '1.5.0'
+    core_ktx = '1.6.0'
+    constraintlayout = '2.1.1'
+    junit = '4.13.2'
+    android_junit = '1.1.3'
+    espresso_core = '3.4.0'
+    material = '1.4.0'
+    retrofit2_kotlin_coroutines_adapter = '0.9.2'
+    kotlin_stdlib_jdk7 = '1.5.20'
+    logging_interceptor = '4.9.1'
+    retrofit2_rxjava2_adapter = '1.0.0'
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.constraintlayout:constraintlayout:${constraintlayout}"
+    testImplementation "junit:junit:${junit}"
+    androidTestImplementation "androidx.test.ext:${android_junit}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${espresso_core}"
 
     //AndroidX
     implementation "androidx.appcompat:appcompat:${compat}"
 
     //Design
     //You should not use the com.android.support and com.google.android.material dependencies in your app at the same time
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation "com.google.android.material:material:${material}"
 
     //Kotlin
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.20'
+    implementation "androidx.core:core-ktx:${core_ktx}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_stdlib_jdk7}"
 
     //Rx-Java
     implementation "io.reactivex.rxjava2:rxandroid:${rxandroid}"
@@ -73,12 +86,20 @@ dependencies {
     //Retrofit 2
     implementation "com.squareup.retrofit2:retrofit:${retrofit}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofit}"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:${logging_interceptor}"
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:${retrofit2_rxjava2_adapter}"
 
     implementation "com.google.dagger:dagger:${dagger}"
     implementation "com.google.dagger:dagger-android:${dagger}"
     implementation "com.google.dagger:dagger-android-support:${dagger}"
     kapt "com.google.dagger:dagger-compiler:${dagger}"
     kapt "com.google.dagger:dagger-android-processor:${dagger}"
+
+    implementation "io.insert-koin:koin-core:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_core}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines_android}"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:${retrofit2_kotlin_coroutines_adapter}"
 }
