--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
 }
+apply from: 'lib_version.gradle'
 
 android {
     compileSdkVersion 30
@@ -17,6 +18,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -35,35 +41,14 @@ android {
     buildFeatures {
         viewBinding true
     }
-}
 
-
-ext {
-    compat = '1.3.1'
-    dagger = '2.37'
-    rxandroid = '2.1.1'
-    rxjava = '2.2.20'
-    retrofit = '2.9.0'
-    koin_version = "3.1.2"
-    coroutines_core = '1.5.1'
-    coroutines_android = '1.5.0'
-    core_ktx = '1.6.0'
-    constraintlayout = '2.1.1'
-    junit = '4.13.2'
-    android_junit = '1.1.3'
-    espresso_core = '3.4.0'
-    material = '1.4.0'
-    retrofit2_kotlin_coroutines_adapter = '0.9.2'
-    kotlin_stdlib_jdk7 = '1.5.20'
-    logging_interceptor = '4.9.1'
-    retrofit2_rxjava2_adapter = '1.0.0'
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation "androidx.constraintlayout:constraintlayout:${constraintlayout}"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     testImplementation "junit:junit:${junit}"
     androidTestImplementation "androidx.test.ext:${android_junit}"
     androidTestImplementation "androidx.test.espresso:espresso-core:${espresso_core}"
@@ -102,4 +87,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_core}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines_android}"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:${retrofit2_kotlin_coroutines_adapter}"
+
+    implementation "io.coil-kt:coil:$coil"
+
+    implementation "androidx.room:room-runtime:$room"
+    kapt "androidx.room:room-compiler:$room"
+    implementation "androidx.room:room-ktx:$room"
 }
