--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.descriptionscreen.DescriptionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.history.HistoryActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
